Fix issue with footer background not extending to bottom on small screens

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,7 +15,6 @@ body {
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 60px;
   background-color: #f5f5f5;
 }
 
